Adding repo link to RMD file

--- a/FinalExam.Rmd
+++ b/FinalExam.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "FinalExam"
 author: "Echo"
-date: "7/3/2021"
+date: "7/8/2021"
 output: word_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r setup, message=FALSE}
+knitr::opts_chunk$set(message = FALSE)
 ```
 
 ## R Markdown
@@ -28,3 +28,5 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+Github Repo Link: <https://github.com/enatt/Exam3>
